# talaria

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  agent_watcher.py  board.json  docker-compose.yml  kanban.json  migrate_to_cards.py  project.md  pyproject.toml  requirements.txt  server.py  talaria.config.json  talaria_cli.py
.githooks/: commit-msg
.github/workflows/: test.yml
cards/: 06a31581.md  1af5612f.md  1c62fc3a.md  3e1b1db5.md  65a28b8c.md  9f875537.md  a1d2682d.md  d6b8818c.md  f07e06c2.md
docs/: architecture.excalidraw.json  architecture.md
guides/: coding-guide.md  groom-guide.md  review-guide.md  spec-guide.md  talaria.config.example.json  talaria.md
scripts/: check_commit_message.py  install_hooks.sh  promotion-health-gate.sh
src/talaria/: __init__.py  board.py  cli.py  guardrails.py  server.py  telegram_ui.py  triggers.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_architecture_refresh.py  test_auto_transition_policy.py  test_board_state.py  test_cli.py  test_self_hosting_guardrails.py  test_telegram_ui.py  test_triggers.py  test_watcher_api_contract.py  test_watcher_lock.py  test_watcher_robustness.py
