[project]
name = "talaria"
version = "0.1.0"
description = "AI-native kanban — cards become autonomous coding agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Bryan Feng", email = "bryfeng@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = ["gunicorn>=21.0"]
dev = ["pytest>=8.0", "ruff>=0.2"]

[project.scripts]
talaria = "talaria.cli:main"
talaria-server = "talaria.server:main"
talaria-telegram-ui = "talaria.telegram_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
