[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talaria"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["flask>=3.0", "pyyaml>=6.0"]

[project.scripts]
talaria = "talaria.server:main"
talaria-server = "talaria.server:main"

[tool.setuptools.packages.find]
where = ["src"]
